--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,11 @@
 make:
-	g++ -std=c++11 main.cpp -o coin
+	g++ -std=c++11  client.cpp -o peerclient
+
+gen:
+	g++ -std=c++11  coins.cpp -o gen	
+
+test:
+	g++ -std=c++11  main.cpp -o coin
+
+clean:
+	rm gen coin peerclient
