--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,9 @@ make:
 gen:
 	g++ -std=c++11  coins.cpp -o gen -I/usr/include/python2.7 -lpython2.7
 
+all:
+	g++ -std=c++11  coins.cpp -o gen -I/usr/include/python2.7 -lpython2.7
+	g++ -std=c++11  client.cpp -o peerclient -I/usr/include/python2.7 -lpython2.7
 
 
 clean:
